# evolve-core

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
doc/: allocators.md
evolve_inner_core/: Cargo.toml
evolve_inner_core/src/: array.rs  array_tests.rs  class_ids.rs  closure.rs  closure_tests.rs  f64.rs  gmp_mpfr.rs  i64.rs  intrinsic.rs  leak.rs  lib.rs  llvm.rs  llvm_tests.rs  mem.rs  misc.rs  object.rs  string.rs  testing.rs  tuple.rs  tuple_tests.rs
evolve_inner_core/src/intrinsic/: cmp.rs  cmp_tests.rs  loops.rs  math.rs  math_tests.rs
evolve_inner_core/src/object/: convert.rs  debug.rs  default.rs  hash.rs
evolve_inner_core/src/string/: use_cstr.rs  use_str.rs
evolve_outer_core/: Cargo.toml
evolve_outer_core/src/: allocators.rs  array.rs  binary_heap.rs  bitmap.rs  gmp_mpfr.rs  heap.rs  heap_tests.rs  io.rs  lib.rs  libc_helpers.rs  map.rs  misc.rs  puts.rs  regex.rs  rustix.rs  set.rs  string.rs  string_append.rs  string_tests.rs  stringmap.rs  testing.rs
evolve_outer_core/src/allocators/: bdwgc_alloc.rs  libc_alloc.rs  libgc_alloc.rs  mi_malloc.rs  redirect_malloc.rs
evolve_outer_core/src/allocators/libgc_alloc/: libgc.rs
src/: lib.rs
