[package]
name = "evolve-core"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
resolver = "3"

[workspace]
members = [
    "evolve_inner_core",
    "evolve_outer_core",
]
#    "inject_global_allocator",

[profile.release]
lto = "fat"
panic = "abort"

[workspace.lints.rust]
arithmetic_overflow = "deny"

[workspace.lints.clippy]
# see: https://doc.rust-lang.org/clippy/lints.html
correctness = { level = "deny", priority = 2 }
suspicious = { level = "deny", priority = 1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -2 }
style = { level = "deny", priority = -3 }
# pedantic = { level = "deny", priority = -4 }

checked_conversions = "deny"
cast_possible_wrap = "deny"
integer_division = "deny"
unchecked_duration_subtraction = "deny"
expect_used = "deny"
panicking_unwrap = "deny"
option_env_unwrap = "deny"
indexing_slicing = "deny"
join_absolute_paths = "deny"
serde_api_misuse = "deny"
uninit_vec = "deny"
transmute_int_to_char = "deny"
transmute_int_to_float = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"

ref_as_ptr = "deny"
cast_lossless = "deny"
ptr_as_ptr = "deny"

# TODO
unwrap_used = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
arithmetic_side_effects = "allow"
cast_ptr_alignment = "allow"

# Okay pedantic
inline-always = "allow"
no_mangle_with_rust_abi = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
