[package]
name = "evolve-core"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
resolver = "3"

[workspace]
members = [
    "evolve_inner_core",
    "evolve_outer_core",
]
#    "inject_global_allocator",

[profile.release]
lto = "fat"
panic = "abort"

[workspace.lints.rust]
arithmetic_overflow = "forbid"

[workspace.lints.clippy]
# see: https://doc.rust-lang.org/clippy/lints.html
correctness = { level = "forbid", priority = 1 }
suspicious = { level = "forbid", priority = 1 }
complexity = { level = "forbid", priority = 1 }
perf = { level = "forbid", priority = 1 }
style = { level = "forbid", priority = 1 }
pedantic = { level = "warn", priority = -1 }

# TODO
unwrap_used = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
arithmetic_side_effects = "allow"
cast_ptr_alignment = "allow"
cast_possible_wrap = "deny"

# Okay pedantic
inline-always = "allow"
no_mangle_with_rust_abi = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
uninlined-format-args = "allow"
similar_names = "allow"
