[package]
name = "evolve_inner_core"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "^0.2", default-features = false, features = ["const-extern-fn"] }
libc-print = {  version = "^0.1", default-features = false }
gmp-mpfr-sys = { version = "^1.6", default-features = false, features = ["mpfr"] }
ordered-float = { version = "^4.5",  default-features = false }

[dev-dependencies]
pretty_assertions = "^1.4"
rug = "^1.26"
test-case = "^3.3"
