[package]
name = "evolve_inner_core"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "^0.2", default-features = false, features = ["const-extern-fn"] }
libc-print = {  version = "^0.1", default-features = false }
ordered-float = { version = "^4.5",  default-features = false }
num-traits = { version = "^0.2",  default-features = false }

[dev-dependencies]
pretty_assertions = "^1.4"
test-case = "^3.3"
