# cargo-features = ["test-dummy-unstable"]
# cargo-features = ["set_ptr_value"]

[package]
name = "evolve_outer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# no-std
libc = { version = "^0.2", default-features = false, features = ["const-extern-fn"] }
libc-print = {  version = "^0.1", default-features = false }
rustix = { version = "^1.0", default-features = false, features = ["stdio", "time"] }
gmp-mpfr-sys = { version = "^1.6", default-features = false, features = ["mpfr"] }
evolve_inner_core = { path = "../evolve_inner_core" }
ordered-float = { version = "5.0.0", default-features = false }
smallvec = { version = "1.14.0", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }

# data structures
ahash = { version = "^0.8", default-features = false }
hashbrown = { version = "^0.15", default-features = false }
indexmap = { version = "^2.8",default-features = false }
regex = { version = "^1.11", default-features = false, features = ["unicode-perl"] }
# min-max-heap = { version = "1.3.0",  default-features = false, optional = true }
min-max-heap = { git = "https://github.com/thoughtafter/min-max-heap-rs", default-features = false, branch = "no_std-support"  }
roaring = { version = "0.10.10",  default-features = false }

# strings
lexical = {  version = "7.0.4", default-features = false, features = ["radix", "parse-floats", "parse-integers", "write-floats", "write-integers"] }
#lexical-core = { version = "1.0.5", default-features = false, features = ["write-floats", "write-integers"] }
ryu = { version = "1.0.20",  default-features = false }
itoa = { version = "1.0.15",  default-features = false, features = ["no-panic"] }
unicase = { version = "2.8.1",  default-features = false }

# allocators
bdwgc-alloc = { version = "0.6.9", default-features = false, features = ["cmake"], optional = true}
libc_alloc = { version = "1.0.7", default-features = false, optional = true }
mimalloc = { version = "0.1.44", optional = true }

#inject_global_allocator = { path = "../inject_global_allocator", optional = true }
# std
# llvm-sys = { version = "191.0.0-rc1", default-features = false }
# postgres = { version = "0.19.8", default-features = false }

[dev-dependencies]
ctor = { version = "^0.3", default-features = false }
pretty_assertions = "^1.4"
test-case = "^3.3"
rug = "^1.27"

# temporary, probably
gmp-mpfr-sys = { version = "^1.6", default-features = false, features = ["mpfr"] }

[features]
default = []
bdwgc_alloc = ["dep:bdwgc-alloc"]
libgc_alloc = []
libc_alloc = ["dep:libc_alloc"]
mimalloc_alloc = ["dep:mimalloc", "redirect_malloc"]
redirect_malloc = []

[profile.release]
lto = "fat"
panic = "abort"
